--- a/src/pages/game/ui/Company/Company.module.css
+++ b/src/pages/game/ui/Company/Company.module.css
@@ -35,3 +35,12 @@
   text-align: center;
   font-weight: bold;
 }
+
+.railroad {
+  background: rgb(255, 29, 88);
+  background: linear-gradient(
+    135deg,
+    rgba(255, 29, 88, 1) 50%,
+    rgba(0, 221, 255, 1) 50%
+  );
+}
